# PlutoOS

./: README.md  Zlfs-chroot.sh  build-stage_1-1.sh  build-stage_1-2.sh  build-stage_2-3-certs.sh  build-stage_2.sh
docs/: index.html
stage_0-filesystem-setup/: 00_source-files.md  01_mount-create-directories.sh  02_limited-packages.sh  environment.sh  source_list.txt
stage_1_temptools/: 101-binutils-2.45.zbc  102-gcc-14.3.0.zbc  103-linux-6.6.127.zbc  103-linux-6.6.97.zbc  104-glibc-2.41.zbc  104-musl-1.2.5.zbc  105-Libstdcpp.zbc  106-m4-1.4.20.zbc  106-m4-1.4.21.zbc  107-ncurses-6.5.zbc  108-bash-5.2.37.zbc  108-bash-5.3.zbc  109-coreutils-9.10.zbc  110-diffutils-3.12.zbc  111-file-5.46.zbc  112-findutils-4.10.0.zbc  113-gawk-5.3.2.zbc  114-grep-3.12.zbc  115-gzip-1.14.zbc  116-make-4.4.1.zbc  117-patch-2.8.zbc  118-sed-4.9.zbc  119-tar-1.35.zbc  120-xz-5.8.1.zbc  121-binutils-2.45.zbc  122-gcc-14.3.0.zbc
stage_2-1_extra-tools/: 200-create-files_systemd.sh  200-dirs-files-symlinks.sh  201-gettext-tiny-0.3.3.zbc  202-bison-3.8.2.zbc  203-perl-5.42.0.zbc  204-Python-3.14.2.zbc  205-texinfo-7.2.zbc  206-util-linux-2.41.3.zbc  207-nano-8.7.1.zbc  208-less-678.zbc  209-cleanup-temp.sh
stage_2-2_base-system/: 200-get-packages.sh  200-wget-list-musl  200-wget-list-sysv  201-man-pages-6.14.zbc  202-iana-etc-20250519.zbc  203-glibc-2.41.zbc  203-musl-1.2.5.zbc  (+152 more)
zbuild-source/: archiver.cpp  base_config.zbc  color.hpp  deptree.zbc  executor.cpp  helper.cpp  helper.hpp  main.cpp  manager.cpp  manager.hpp  meson.build  meson_options.txt  screen.hpp  zbuild.cpp  zbuild.hpp
(+270 files in other folders)
